--- a/src/main/resources/templates/listaMotivos.html
+++ b/src/main/resources/templates/listaMotivos.html
@@ -6,38 +6,21 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/xhtml">
     <head th:replace="plantillas/plantilla1 ::head">
-        <title>TODO supply a title</title>
+        <title>Motivos</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-        
+
     </head>
     <body>
-        <div class="container">
-            <header th:replace="plantillas/plantilla1 ::nav">
-
-            </header>
-            
-            <h1>Lista de Motivos</h1>
-            <div class="row mt-2">
-                <div class="col-9">
-                    <form th:action="@{/filtrarMotivos}" method="post">
-                        <div class="input-group">
-                            <input type="text" name="txtTexto" 
-                                   placeholder="Escribe un motivo"
-                                   class="form-control"/>
-                            <input type="submit"
-                                   class="btn btn-primary" value="buscar"/>
-                        </div>
-
-                    </form>
+        <header th:replace="plantillas/plantilla1 ::nav"></header>
+        <div class="container-lg p-20 bg-warning">
+            <div class="container-lg" style="background-color: antiquewhite">
+                <div class="card border-0 bg-warning" style="margin-top: 2%" >
+                    <div class="card-header"> <h1>Lista de motivos</h1></div>
                 </div>
-                <div class="col-3">
-                    <a th:href="@{/nuevoMotivo}" class="btn btn-primary mx-auto"><i class="fas fa-plus"></i> Nuevo Motivo</a>
-                </div>
-            </div>
-
-            <div th:if="${ msg != null and !msg.empty}">
+                
+                <div th:if="${ msg != null and !msg.empty}">
                     <div class="alert alert-warning alert-dismissible fade show" role="alert">
                         <strong>Mensaje:</strong> 
                         <p th:text="${msg}"></p>
@@ -45,37 +28,59 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         <span th:attr="msg=@{null}"></span>
                     </div>
                 </div>
+                
+                <div class="row align-items-center">
+                    <form class="form" style="margin-top: 2%; margin-bottom: 2%" th:action="@{/filtrarMotivos}" method="post">
+                        <div class="input-group">
+                            <div class="col">
+                                <input type="text" name="txtTexto" 
+                                       placeholder="Ingrese un motivo a buscar" 
+                                       class="form-control" style="border-radius: 1%"
+                                       />
+                            </div>
+                            <div  class="col col-lg-2">
+                                <input style="width: 200px;border-radius: 1%"   type="submit" name="btnBuscar" value="Buscar" class="btn btn-warning mx-auto" />
+                            </div>
+                            <div  class="col col-lg-2">
+                                <a style="width: 150px" class="btn btn-warning mx-auto" th:href="@{/nuevoMotivo}"><i class="fas fa-user-plus"></i>Nuevo</a>
+                            </div> 
+                        </div>
+                    </form>
+                </div>
+
+                
 
 
-            <div th:if="${motivos != null and !motivos.empty}">
-                <table class="table table-hover table-striped">
-                    <thead class="table-dark">
-                        <tr>
-                            <th>ID</th>
-                            <th>Motivo</th>
-                            <th>Acciones</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr th:each="mot:${motivos}">
-                            <td th:text="${mot.idMotivo}"></td>
-                            <td th:text="${mot.justificacion}"></td>
-                            <td>
-                                <a th:href="@{/editarMotivo/} + ${mot.idMotivo}">
-                                    <i class="fas fa-edit"></i> Editar</a> |
-                                <a th:href="@{/eliminarMotivo/} + ${mot.idMotivo}">
-                                    <i class="fas fa-minus"></i> Eliminar</a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div th:if="${motivos != null and !motivos.empty}">
+                    <table class="table table-hover table-striped">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Motivo</th>
+                                <th>Acciones</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr th:each="mot:${motivos}">
+                                <td th:text="${mot.idMotivo}"></td>
+                                <td th:text="${mot.justificacion}"></td>
+                                <td>
+                                    <a th:href="@{/editarMotivo/} + ${mot.idMotivo}">
+                                        <i class="fas fa-user-edit"></i> Editar</a> |
+                                    <a th:href="@{/confirmarEliminacion/} + ${mot.idMotivo}">
+                                        <i class="fas fa-user-times"></i> Eliminar</a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
 
-            </div>
-            <div th:if="${motivos == null or moivos.empty}">
-                No hay motivos de ausencia en la base de datos
+                </div>
+                <div th:if="${motivos == null or motivos.empty}">
+                    No hay motivos que mostrar
+                </div>
             </div>
         </div>
-            
+
     </body>
 
 </html>
