--- a/src/main/resources/templates/plantillas/plantilla1.html
+++ b/src/main/resources/templates/plantillas/plantilla1.html
@@ -34,7 +34,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         <li><a class="dropdown-item" href="#">Administrar vacaciones</a></li>
                         <li><a class="dropdown-item" href="#">Administrar cronogramas</a></li>
                         <li><a class="dropdown-item" href="#">Administrar incapacidades</a></li>
-                        <li><a class="dropdown-item" href="#">Administrar feriados</a></li>
+                        <li><a class="dropdown-item" th:href="@{/colectivos}">Administrar colectivos</a></li>
                         <li><a class="dropdown-item" th:href="@{/motivos}">Administrar motivos</a></li>
                         <li><a class="dropdown-item" href="#">Otros</a></li>
                     </ul>
