--- a/src/main/resources/templates/plantillas/plantilla1.html
+++ b/src/main/resources/templates/plantillas/plantilla1.html
@@ -25,7 +25,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Cronogramas</a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Administrar cronogramas</a></li>
+                        <li><a class="dropdown-item" th:href="@{\buscarCronogramas}">Administrar cronogramas</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
